[perf] ReleaseService — getArtistReleases N+1 쿼리 배치 조회로 개선
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>